Publish DELETE operations